PFC-35 - Limpiar UI
Actualizadas traducciones

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="sthome">Memoria del PFC</string>
     <string name="tie2e">Repositorio de código</string>
     <string name="license">Licencia</string>
-    <string name="about">Sobre la app</string>
+    <string name="about">Versión</string>
     <string name="exit">Salir</string>
 
     <!-- Device activity -->
